Cambios en el index, agrega contenidos para nuevo home

--- a/css/theme-aquatica.css
+++ b/css/theme-aquatica.css
@@ -169,6 +169,7 @@ p.lead {
   font-size: 16px;
   line-height: 30px;
   font-weight: normal;
+  text-align: justify;
 }
 p:last-child {
   margin-bottom: 0px;
